--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
  {
-    "name": "Show images from image links",
-    "version": "1.0",
-    "description": "Exiba imagens a partir dos links de imagens! Uma galeria de imagens será exibida ao final da página ao executar a ação da extensão.",
+    "name": "Exibir imagens de links",
+    "version": "1.3",
+    "description": "Abra uma pasta com lista de links e clique no botão verde para exibir os videos e imagens contidos neles.",
     "permissions": [
         "activeTab",
         "<all_urls>"
@@ -13,17 +13,17 @@
         "all_frames": true
       }],
     "icons": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/showpics16.png",
+        "32": "images/showpics32.png",
+        "48": "images/showpics48.png",
+        "128": "images/showpics128.png"
       },
     "browser_action": {
         "default_icon":  {
-            "16": "images/get_started16.png",
-            "32": "images/get_started32.png",
-            "48": "images/get_started48.png",
-            "128": "images/get_started128.png"
+            "16": "images/showpics16.png",
+            "32": "images/showpics32.png",
+            "48": "images/showpics48.png",
+            "128": "images/showpics128.png"
             },
         "default_popup": "show-images.html"
       },
